--- a/Info.plist
+++ b/Info.plist
@@ -13,7 +13,7 @@
     <key>CFBundleShortVersionString</key>
     <string>1.0.0</string>
     <key>LSUIElement</key>
-    <true/>
+    <false/>
     <key>LSMinimumSystemVersion</key>
     <string>14.0</string>
     <key>NSBluetoothAlwaysUsageDescription</key>
