--- a/Info.plist
+++ b/Info.plist
@@ -4,6 +4,8 @@
 <dict>
     <key>CFBundleIdentifier</key>
     <string>com.akim.lidguard</string>
+    <key>CFBundleIconFile</key>
+    <string>AppIcon</string>
     <key>CFBundleName</key>
     <string>LidGuard</string>
     <key>CFBundleExecutable</key>
